builds/tests/352/data/attachments/3229ec1b2a34e3e0.txt
2026-06-21 14:30:40,051 INFO     yoyo.migrations — Applying 0001_initial_schema
2026-06-21 14:30:40,051 INFO     yoyo.migrations —  - applying step 0
2026-06-21 14:30:40,051 INFO     yoyo.migrations —  - applying step 1
2026-06-21 14:30:40,052 INFO     yoyo.migrations —  - applying step 2
2026-06-21 14:30:40,052 INFO     yoyo.migrations —  - applying step 3
2026-06-21 14:30:40,052 INFO     yoyo.migrations —  - applying step 4
2026-06-21 14:30:40,052 INFO     yoyo.migrations —  - applying step 5
2026-06-21 14:30:40,052 INFO     yoyo.migrations —  - applying step 6
2026-06-21 14:30:40,053 INFO     yoyo.migrations —  - applying step 7
2026-06-21 14:30:40,053 INFO     yoyo.migrations —  - applying step 8
2026-06-21 14:30:40,053 INFO     yoyo.migrations —  - applying step 9
2026-06-21 14:30:40,053 INFO     yoyo.migrations —  - applying step 10
2026-06-21 14:30:40,053 INFO     yoyo.migrations —  - applying step 11
2026-06-21 14:30:40,054 INFO     yoyo.migrations —  - applying step 12
2026-06-21 14:30:40,054 INFO     yoyo.migrations —  - applying step 13
2026-06-21 14:30:40,054 INFO     yoyo.migrations —  - applying step 14
2026-06-21 14:30:40,056 INFO     yoyo.migrations — Marking 0001_initial_schema applied
2026-06-21 14:30:40,057 INFO     yoyo.migrations — Applying 0002_exchange_rates_source_target
2026-06-21 14:30:40,057 INFO     yoyo.migrations —  - applying step 0
2026-06-21 14:30:40,057 INFO     yoyo.migrations —  - applying step 1
2026-06-21 14:30:40,059 INFO     yoyo.migrations — Marking 0002_exchange_rates_source_target applied
2026-06-21 14:30:40,059 INFO     yoyo.migrations — Applying 0003_app_currencies
2026-06-21 14:30:40,060 INFO     yoyo.migrations —  - applying step 0
2026-06-21 14:30:40,061 INFO     yoyo.migrations — Marking 0003_app_currencies applied
2026-06-21 14:30:40,062 INFO     yoyo.migrations — Applying 0004_receipt_pipeline
2026-06-21 14:30:40,062 INFO     yoyo.migrations —  - applying step 0
2026-06-21 14:30:40,062 INFO     yoyo.migrations —  - applying step 1
2026-06-21 14:30:40,063 INFO     yoyo.migrations —  - applying step 2
2026-06-21 14:30:40,063 INFO     yoyo.migrations —  - applying step 3
2026-06-21 14:30:40,063 INFO     yoyo.migrations —  - applying step 4
2026-06-21 14:30:40,063 INFO     yoyo.migrations —  - applying step 5
2026-06-21 14:30:40,064 INFO     yoyo.migrations —  - applying step 6
2026-06-21 14:30:40,064 INFO     yoyo.migrations —  - applying step 7
2026-06-21 14:30:40,064 INFO     yoyo.migrations —  - applying step 8
2026-06-21 14:30:40,064 INFO     yoyo.migrations —  - applying step 9
2026-06-21 14:30:40,065 INFO     yoyo.migrations —  - applying step 10
2026-06-21 14:30:40,065 INFO     yoyo.migrations —  - applying step 11
2026-06-21 14:30:40,065 INFO     yoyo.migrations —  - applying step 12
2026-06-21 14:30:40,066 INFO     yoyo.migrations —  - applying step 13
2026-06-21 14:30:40,066 INFO     yoyo.migrations —  - applying step 14
2026-06-21 14:30:40,066 INFO     yoyo.migrations —  - applying step 15
2026-06-21 14:30:40,067 INFO     yoyo.migrations —  - applying step 16
2026-06-21 14:30:40,067 INFO     yoyo.migrations —  - applying step 17
2026-06-21 14:30:40,067 INFO     yoyo.migrations —  - applying step 18
2026-06-21 14:30:40,068 INFO     yoyo.migrations —  - applying step 19
2026-06-21 14:30:40,068 INFO     yoyo.migrations —  - applying step 20
2026-06-21 14:30:40,068 INFO     yoyo.migrations —  - applying step 21
2026-06-21 14:30:40,068 INFO     yoyo.migrations —  - applying step 22
2026-06-21 14:30:40,070 INFO     yoyo.migrations — Marking 0004_receipt_pipeline applied
2026-06-21 14:30:40,071 INFO     yoyo.migrations — Applying 0005_income_logging
2026-06-21 14:30:40,071 INFO     yoyo.migrations —  - applying step 0
2026-06-21 14:30:40,072 INFO     yoyo.migrations —  - applying step 1
2026-06-21 14:30:40,072 INFO     yoyo.migrations —  - applying step 2
2026-06-21 14:30:40,072 INFO     yoyo.migrations —  - applying step 3
2026-06-21 14:30:40,073 INFO     yoyo.migrations —  - applying step 4
2026-06-21 14:30:40,073 INFO     yoyo.migrations —  - applying step 5
2026-06-21 14:30:40,073 INFO     yoyo.migrations —  - applying step 6
2026-06-21 14:30:40,074 INFO     yoyo.migrations —  - applying step 7
2026-06-21 14:30:40,074 INFO     yoyo.migrations —  - applying step 8
2026-06-21 14:30:40,074 INFO     yoyo.migrations —  - applying step 9
2026-06-21 14:30:40,074 INFO     yoyo.migrations —  - applying step 10
2026-06-21 14:30:40,074 INFO     yoyo.migrations —  - applying step 11
2026-06-21 14:30:40,075 INFO     yoyo.migrations —  - applying step 12
2026-06-21 14:30:40,075 INFO     yoyo.migrations —  - applying step 13
2026-06-21 14:30:40,075 INFO     yoyo.migrations —  - applying step 14
2026-06-21 14:30:40,075 INFO     yoyo.migrations —  - applying step 15
2026-06-21 14:30:40,075 INFO     yoyo.migrations —  - applying step 16
2026-06-21 14:30:40,075 INFO     yoyo.migrations —  - applying step 17
2026-06-21 14:30:40,076 INFO     yoyo.migrations —  - applying step 18
2026-06-21 14:30:40,076 INFO     yoyo.migrations —  - applying step 19
2026-06-21 14:30:40,076 INFO     yoyo.migrations —  - applying step 20
2026-06-21 14:30:40,076 INFO     yoyo.migrations —  - applying step 21
2026-06-21 14:30:40,076 INFO     yoyo.migrations —  - applying step 22
2026-06-21 14:30:40,077 INFO     yoyo.migrations —  - applying step 23
2026-06-21 14:30:40,077 INFO     yoyo.migrations —  - applying step 24
2026-06-21 14:30:40,077 INFO     yoyo.migrations —  - applying step 25
2026-06-21 14:30:40,077 INFO     yoyo.migrations —  - applying step 26
2026-06-21 14:30:40,077 INFO     yoyo.migrations —  - applying step 27
2026-06-21 14:30:40,077 INFO     yoyo.migrations —  - applying step 28
2026-06-21 14:30:40,078 INFO     yoyo.migrations —  - applying step 29
2026-06-21 14:30:40,078 INFO     yoyo.migrations —  - applying step 30
2026-06-21 14:30:40,078 INFO     yoyo.migrations —  - applying step 31
2026-06-21 14:30:40,078 INFO     yoyo.migrations —  - applying step 32
2026-06-21 14:30:40,079 INFO     yoyo.migrations —  - applying step 33
2026-06-21 14:30:40,079 INFO     yoyo.migrations —  - applying step 34
2026-06-21 14:30:40,081 INFO     yoyo.migrations —  - applying step 35
2026-06-21 14:30:40,081 INFO     yoyo.migrations —  - applying step 36
2026-06-21 14:30:40,081 INFO     yoyo.migrations —  - applying step 37
2026-06-21 14:30:40,082 INFO     yoyo.migrations —  - applying step 38
2026-06-21 14:30:40,084 INFO     yoyo.migrations —  - applying step 39
2026-06-21 14:30:40,086 INFO     yoyo.migrations —  - applying step 40
2026-06-21 14:30:40,090 INFO     yoyo.migrations — Marking 0005_income_logging applied
2026-06-21 14:30:40,091 INFO     yoyo.migrations — Applying 0006_category_templates
2026-06-21 14:30:40,092 INFO     yoyo.migrations —  - applying step 0
2026-06-21 14:30:40,096 INFO     yoyo.migrations — Marking 0006_category_templates applied
2026-06-21 14:30:40,097 INFO     yoyo.migrations — Applying 0007_drop_legacy_llmbroker
2026-06-21 14:30:40,097 INFO     yoyo.migrations —  - applying step 0
2026-06-21 14:30:40,097 INFO     yoyo.migrations —  - applying step 1
2026-06-21 14:30:40,099 INFO     yoyo.migrations — Marking 0007_drop_legacy_llmbroker applied
2026-06-21 14:30:40,105 INFO     dinary.background.classification.task — Receipt drain: processing receipt_id=1
2026-06-21 14:30:40,107 ERROR    dinary.background.classification.task — Permanent error for receipt_id=1 — poisoning
Traceback (most recent call last):
  File "/home/runner/work/dinary/dinary/src/dinary/background/classification/task.py", line 246, in _process_job
    items = await asyncio.to_thread(_get_items, job.receipt_id)
            ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/opt/hostedtoolcache/Python/3.13.14/x64/lib/python3.13/asyncio/threads.py", line 26, in to_thread
    return await loop.run_in_executor(None, func_call)
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/opt/hostedtoolcache/Python/3.13.14/x64/lib/python3.13/concurrent/futures/thread.py", line 59, in run
    result = self.fn(*self.args, **self.kwargs)
  File "/home/runner/work/dinary/dinary/src/dinary/background/classification/task.py", line 541, in _get_items
    raise RuntimeError(
        f"receipt_id={receipt_id}: no items after parsing — parse error",
    )
RuntimeError: receipt_id=1: no items after parsing — parse error
